# egglog-dataflow

./: .gitignore  .gitmodules  README.md
code/dd-design-spike/: Cargo.toml  README.md
code/dd-design-spike/src/: lib.rs  main.rs
code/minimal-dd-trial/: Cargo.toml  Makefile
code/minimal-dd-trial/docs/: lib.md
code/minimal-dd-trial/fixtures/: path-reachability.egg  repeated-variable.egg  three-way-join.egg
code/minimal-dd-trial/src/: lib.rs
code/minimal-dd-trial/tools/: rust_literate.py
code/option3-overlap/: Cargo.toml
code/option3-overlap/scripts/: summarize_option3_lanes.py  validate_option3_lanes.py
code/option3-overlap/src/: main.rs
findings/: 2026-04-29-egglog-on-gpu-meeting-prep.md  README.md  adversarial-review.md  dd-full-refactor-design-spike.md  dd-refactor-high-level-fixes.md  evidence-ledger.md  methodology.md  minimal-dd-trial.md  option-3-experiment-findings.md  option-3-experiments.md  pr-856-typed-execution-state-review.md  primitive-prototyping.md  synthesis.md
findings/adversarial-notes/: collaborator-readiness.md  dd-flowlog-substrate.md  egglog-semantics.md  option-completeness.md  source-trace-audit.md
findings/artifacts/: option3-overlap-semantic.json  option3-overlap.json
findings/options/: README.md  option-1-native-equality-dd-rule-eval.md  option-2-proof-term-encoding-dd.md  option-3-flowlog-datatoad-middle-layer.md  option-3-new-backend.md  (+3 more)
messages/: april-24-2026-meeting.md  dec-17-2025-slack.md  eli-dd-overlapped-scheduling.md  eli-meeting-april-29-2026.md  eli-scheduling-seminaive.md  oct-15-2024-zulip.md
(+219 files in other folders)
