[package]
name = "option3-overlap"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
differential-dataflow = { path = "../../repos/differential-dataflow/differential-dataflow" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
timely = { path = "../../repos/timely-dataflow/timely" }

[patch.crates-io]
timely = { path = "../../repos/timely-dataflow/timely" }
